@@ -1,14 +1,22 @@
 buildscript {
     repositories {
+        maven { url = 'https://maven.minecraftforge.net' }
+        maven { url = 'https://repo.spongepowered.org/maven' }
         mavenCentral()
+    }
+    dependencies {
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
+        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
     }
 }
 
 plugins {
-    id "fabric-loom" version "1.0-SNAPSHOT"
     id "com.diffplug.spotless" version "5.12.4"
     id 'maven-publish'
 }
+
+apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'org.spongepowered.mixin'
 
 version = project.mod_version + "-SNAPSHOT"
 
@@ -25,47 +33,47 @@ if (ext.tag) {
     version = ext.tag.substring("${rootProject.modloader}/".length())
 }
 
-dependencies {
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings loom.officialMojangMappings()
+def extraModsDir = "run/forge-extra"
 
-    modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
-    modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
-    modCompileOnly("dev.emi:trinkets:${rootProject.trinkets_version}") { transitive false }
-    modCompileOnly("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
-    //modRuntimeOnly "dev.emi:trinkets:${rootProject.trinkets_version}"
-    modRuntimeOnly("me.shedaniel.cloth:cloth-config-${rootProject.modloader}:${project.cloth}")
-    modApi("com.terraformersmc:modmenu:${project.mod_menu_version}")
-    modImplementation "dev.architectury:architectury-${rootProject.modloader}:${rootProject.architectury_version}"
-    modImplementation("appeng:appliedenergistics2-${rootProject.modloader}:${rootProject.ae2_version}") {
+dependencies {
+    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
+
+    implementation fg.deobf("appeng:appliedenergistics2-${rootProject.modloader}:${rootProject.ae2_version}") {
         exclude group: "mezz.jei"
         exclude group: "me.shedaniel"
-        exclude group: "net.fabricmc.fabric-api"
     }
 
+    implementation fg.deobf("dev.architectury:architectury-forge:${rootProject.architectury_version}")
+    implementation fg.deobf("me.shedaniel.cloth:cloth-config-forge:${rootProject.cloth}")
+    implementation fg.deobf("top.theillusivec4.curios:curios-forge:${rootProject.curios_version}")
+
+    //runtimeOnly fg.deobf("curse.maven:jade-324717:3872400")
+
+    compileOnly fg.deobf("mezz.jei:jei-${jei_minecraft_version}-common-api:${jei_version}")
+    compileOnly fg.deobf("mezz.jei:jei-${jei_minecraft_version}-forge-api:${jei_version}")
     if (project.runtime_itemlist_mod == "jei") {
-        modImplementation("mezz.jei:jei-${jei_minecraft_version}-${rootProject.modloader}:${jei_version}") {
-            exclude group: "mezz.jei"
-        }
+        runtimeOnly fg.deobf("mezz.jei:jei-${jei_minecraft_version}-forge:${jei_version}")
 
-        modCompileOnly("me.shedaniel:RoughlyEnoughItems-${rootProject.modloader}:${project.rei_version}") {
-            exclude group: "net.fabricmc.fabric-api"
-        }
+        compileOnly fg.deobf("me.shedaniel:RoughlyEnoughItems-forge:${project.rei_version}")
     } else if (project.runtime_itemlist_mod == "rei") {
-        modCompileOnly("mezz.jei:jei-${jei_minecraft_version}-${rootProject.modloader}:${jei_version}") {
-            exclude group: "mezz.jei"
-        }
-
-        modImplementation("me.shedaniel:RoughlyEnoughItems-${rootProject.modloader}:${project.rei_version}") {
-            exclude group: "net.fabricmc.fabric-api"
-        }
+        implementation "me.shedaniel.cloth:basic-math:0.6.1"
+        implementation fg.deobf("me.shedaniel:RoughlyEnoughItems-forge:${project.rei_version}")
     } else {
         throw new GradleException("Invalid runtime_itemlist_mod value: " + project.runtime_itemlist_mod)
     }
 
+    annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
-}
 
+    for (extraModJar in fileTree(dir: extraModsDir, include: '*.jar')) {
+        def basename = extraModJar.name.substring(0, extraModJar.name.length() - ".jar".length())
+        def versionSep = basename.lastIndexOf('-')
+        assert versionSep != -1
+        def artifactId = basename.substring(0, versionSep)
+        def version = basename.substring(versionSep + 1)
+        runtimeOnly fg.deobf("extra-mods:$artifactId:$version")
+    }
+}
 
 archivesBaseName = rootProject.archives_base_name
 version = rootProject.version
@@ -74,6 +82,10 @@ group = rootProject.maven_group
 repositories {
     mavenLocal()
     mavenCentral()
+    flatDir {
+        name "extra-mods"
+        dir file(extraModsDir)
+    }
     maven {
         name "Modmaven"
         url "https://modmaven.dev/"
@@ -132,6 +144,35 @@ repositories {
             includeGroup "maven.modrinth"
         }
     }
+    maven {
+        url "https://www.cursemaven.com"
+        content {
+            includeGroup "curse.maven"
+        }
+    }
+}
+
+def commonRunProperties = {
+    workingDirectory project.file('run')
+    property 'forge.logging.console.level', 'debug'
+    property 'fml.earlyprogresswindow', 'false'
+    jvmArgs "--add-opens", "java.base/sun.security.util=ALL-UNNAMED"
+    jvmArgs "--add-opens", "java.base/java.util.jar=ALL-UNNAMED"
+    // See https://github.com/Vazkii/Patchouli#mixin-troubleshooting
+    property 'mixin.env.remapRefMap', 'true'
+    property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+}
+
+minecraft {
+    mappings channel: 'official', version: project.minecraft_version
+    runs {
+        client {
+            with commonRunProperties
+        }
+        server {
+            with commonRunProperties
+        }
+    }
 }
 
 compileJava.options.encoding = 'UTF-8'
@@ -145,14 +186,16 @@ java {
 }
 
 jar {
-    finalizedBy 'remapJar'
+    finalizedBy 'reobfJar'
+    manifest {
+        attributes([
+                "MixinConfigs": "ae2wtlib.mixins.json"
+        ])
+    }
 }
 
 processResources {
-    inputs.property "version", project.version
-    inputs.property "ae2_version", rootProject.ae2_version
-
-    filesMatching("fabric.mod.json") {
+    filesMatching("META-INF/mods.toml") {
         expand "version": project.version, "ae2_version": rootProject.ae2_version
     }
 }
@@ -189,11 +232,11 @@ publishing {
             version = project.version
 
             // add all the jars that should be included when publishing to maven
-            artifact(remapJar) {
-                builtBy remapJar
+            artifact(jar) {
+                builtBy jar
             }
             artifact(sourcesJar) {
-                builtBy remapSourcesJar
+                builtBy sourcesJar
             }
         }
     }
